# local-whisper

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  restart.sh  setup.sh
python-sidecar/: asr_engine.py  llm_engine.py  model_manager.py  requirements.txt  server.py
src/: App.tsx  api.ts  index.css  main.tsx  store.ts  useRecorder.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/pages/: ._Settings.tsx  Console.tsx  Home.tsx  Onboarding.tsx  Overlay.tsx  Settings.tsx
